# wsl-system-guard

./: .gitignore  EXTRACT_TO_GITHUB.md  README.md  pyproject.toml  sitecustomize.py
.github/: AGENTS.md  copilot-instructions.md
.github/workflows/: ci.yml  release.yml
docs/: COPILOT_CONVERSATION_HANDOFF.md  GIT_SCOPE_BOUNDARY_RECOVERY_PLAN.md  ROUTINE_MAINTENANCE.md  SESSION_CONTINUATION_START_HERE.md
examples/: repo-hook.sh
scripts/: install.sh
src/wsl_system_guard/: __init__.py  cli.py  daemon.py
systemd/: wsl-system-guard.service.template
tests/: test_daemon.py
