[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wsl-system-guard"
version = "0.1.0"
description = "System-wide WSL memory pressure guard for all git repositories"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Tom Stening" }]
dependencies = []

[project.scripts]
wsl-system-guard = "wsl_system_guard.daemon:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
